Tue Dec 13 12:13:26 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* COPYING: Updated this file to mention compliance issues wrt the
	  new "The Energy Policy Act of 2005".  Thanks to Malcolm Spence
 	  for providing this.

Tue Dec 13 18:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/tao_cosnotification.doxygen:
          Also parse the subdirectories below Notify and also add inline
          files, the generated doxygen docu was not complete

Tue Dec 13 00:54:04 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* bin/MakeProjectCreator/config/tao_versioning_idl_defaults.mpb:

	  New MPC base project containing necessary versioned namespace
	  related TAO_IDL flags for PIDL and IDL files in core TAO
	  libraries and TAO orbsvcs libraries.

Mon Dec 12 15:31:50 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/ace_for_tao.mpc:

	  Added "nmake" to the list of Windows-based build types that
	  should be considered when adding Windows-specific sources to the
	  ace_for_tao subset.

Mon Dec 12 15:23:29 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/tests.mpc (UPIPE_SAP_Test):

	  Disable this test in the ace_for_tao configuration.  It depends
	  on features not found in the ace_for_tao subset.

Mon Dec 12 14:15:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/compiler.bor:
          Only when we build without VCL support add _NO_VCL to the compiler
          flags

Mon Dec 12 13:01:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vcl.mpb:
          Added verbatim VCL=1 to this base project. This way the correct
          startup objects are linked with the application when vcl is
          used

Sun Dec 11 18:03:05 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/UPIPE_Stream.h (MT_Stream):

	  Moved this typedef out of the global namespace to the
	  ACE_UPIPE_Stream class.  It is only used within this class.